--- a/react-rest-example/package.json
+++ b/react-rest-example/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
