--- a/react-rest-example/package.json
+++ b/react-rest-example/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch db.json --port 3001 --delay 2000"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
