--- a/react-blog/package.json
+++ b/react-blog/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "@tanstack/react-query": "^4.28.0",
+    "jwt-decode": "^3.1.2",
     "pocketbase": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
