--- a/nextfire/package.json
+++ b/nextfire/package.json
@@ -15,6 +15,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
